<resources>
    <string name="app_name" translatable="false">My Trip Planner</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <string name="sign_up_button">Sign-up</string>
    <string name="registration_email">Insert email</string>
    <string name="registration_confirm_email">Confirm email</string>
    <string name="registration_password">Insert password</string>
    <string name="registration_password_confirm">Confirm password</string>
    <string name="registration_button">Register</string>
    <string name="registration_cancel">Cancel</string>
    <string name="field_required">Field required</string>
    <string name="email_mismatch">Emails not matching</string>
    <string name="password_required">Field required</string>
    <string name="password_mismatch">Passwords not matching</string>
    <string name="user_account">Account</string>
    <string name="settings">Settings</string>
    <string name="my_trips">My trips</string>
    <string name="shared_trips">Shared with me</string>
    <string name="favorite_trips">Favorites</string>
    <string name="trip_groups">Trip groups</string>
    <string name="new_trip_button_description">New trip</string>
    <string name="trip_image">Trip image</string>
    <string name="trip_name">Trip name</string>
    <string name="trip_destination">Trip destination</string>
    <string name="trip_start_date">Start date</string>
    <string name="trip_end_date">End date</string>
    <string name="trip_description">Trip description</string>
    <string name="new_images_button_description">Add new images</string>
    <string name="fragment_trips_label">My trips</string>
    <string name="new_trip_label">New trip</string>
    <string name="login_label">Login</string>
    <string name="registration_fragment_label">New user</string>
    <string name="save_new_trip_button">Save new trip</string>
    <string name="read_images_permission_available">Permission to read images granted</string>
    <string name="read_images_access_required">Need permission to read images</string>
    <string name="ok">OK</string>
    <string name="read_images_permission_granted">Image reading permission granted</string>
    <string name="read_images_permission_not_granted">Unable to grant permission</string>
    <string name="trip_images_uploaded">Trip images uploaded to remote storage</string>
    <string name="login_failed">Login error</string>
    <string name="content_trip_image_description">Single trip image</string>
    <string name="date_picker_start">Select starting date</string>
    <string name="date_picker_end">Select ending date</string>
    <string name="save_new_trip">Save</string>
    <string name="trip_saved">Trip saved successfully!</string>
    <string name="trip_content_fragment_label">My trip</string>
    <string name="user_name">Name</string>
    <string name="user_surname">Surname</string>
    <string name="user_settings">User data</string>
    <string name="user_logout">Logout</string>
    <string name="calendar_icon_description">Trip dates</string>
    <string name="location_icon_description">Trip location</string>
    <string name="favorite_trip_icon_description">Set trip as favorite</string>
    <string name="set_favorite_trip">Set trip as favorite</string>
    <string name="share">Share</string>
    <string name="share_trip_description">Select the users to share the trip with</string>
    <string name="share_trip_title">Share trip</string>
    <string name="share_trip_cancel">Cancel</string>
    <string name="share_trip_confirm">Confirm</string>
    <string name="search_for_users">Search for user names</string>
    <string name="new_user_failed">Failed to create new user</string>
    <string name="load_users_failed">Failed to load users list</string>
    <string name="choose_users">Pick users</string>
    <string name="chosen_users">Picked users</string>
    <string name="trip_shared">Trip successfully shared</string>
    <string name="trip_shared_error">Unable to share trip</string>
    <string name="get_images_error">Unable to download some images</string>
    <string name="no_trips">No trips found, check your Internet connection</string>
    <string name="educational_permission_request_title">Permission to read device storage</string>
    <string name="educational_permission_request_content">Access to the device storage is needed to check for possible trip images. If it\'s not granted, some images may be missing</string>
    <string name="got_it">Understood</string>
    <string name="trips_fragment_favorites_label">My favorite trips</string>
    <string name="trips_fragment_shared_label">Shared with me</string>
    <string name="select_trips_mode_title">picked</string>
    <string name="delete">Delete</string>
    <string name="insert_user_name">Insert new user name here</string>
    <string name="insert_user_surname">Insert new user surname here</string>
    <string name="email_bad_format">The email address is badly formatted</string>
    <string name="password_weak">Password has to be at least 6 characters long</string>
    <string name="from">From</string>
    <string name="until">Until</string>
    <string name="no_picked_images_dialog_title">No images picked</string>
    <string name="no_picked_images_dialog_message">You haven\'t picked any images for this trip! Are you sure you want to save it anyway?</string>
    <string name="yes">Yes</string>
    <string name="picked_images_dialog_no">On second thought…</string>
    <string name="date_picker_title">Select trip dates</string>
    <string name="no_dates_picked_dialog_title">No dates picked</string>
    <string name="no_dates_picked_dialog_message">It looks like you didn\'t pick any dates for this trip! You need to select the dates before proceeding</string>
    <string name="trips_deleted">Selected trips have been deleted</string>
</resources>