<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.floatingactionbutton.FloatingActionButton xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/new_trip_button"
    android:contentDescription="@string/new_trip_button_description"
    app:srcCompat="@drawable/ic_baseline_add_24"
    style="?attr/floatingActionButtonStyle">

</com.google.android.material.floatingactionbutton.FloatingActionButton>