<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/outer_layout"
    tools:context=".fragments.NewTripFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:id="@+id/scroll_view_layout"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/inner_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/trip_images_button"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/new_images_button_description"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_baseline_add_photo_alternate_24"
                app:layout_constraintBottom_toTopOf="@+id/trip_dates"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_default="percent"
                app:layout_constraintWidth_percent="@dimen/image_button_width_constraint"
                app:layout_constraintHeight_percent="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/trip_name_layout"
                android:layout_width="@dimen/trip_name_layout_width"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/trip_name"
                app:errorEnabled="true"
                app:counterEnabled="true"
                app:counterMaxLength="@integer/max_trip_name_text_length"
                app:layout_constraintBaseline_toBaselineOf="@+id/trip_destination_layout"
                app:layout_constraintEnd_toStartOf="@+id/trip_destination_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/trip_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text|textCapSentences"
                    android:maxLength="@integer/max_trip_name_text_length"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/trip_destination_layout"
                android:layout_width="@dimen/trip_destination_layout_width"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/trip_destination"
                app:errorEnabled="true"
                app:counterEnabled="true"
                app:counterMaxLength="@integer/max_destination_text_length"
                app:layout_constraintBottom_toTopOf="@+id/trip_description_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/trip_name_layout"
                app:layout_constraintTop_toBottomOf="@+id/trip_dates"
                app:startIconContentDescription="@string/location_icon_description"
                app:startIconDrawable="@drawable/ic_baseline_location_on_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/trip_destination"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textAutoComplete|textCapSentences"
                    android:maxLength="@integer/max_destination_text_length"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/trip_dates"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/date_picker_title"
                app:icon="@drawable/ic_baseline_calendar_today_24"
                app:layout_constraintBottom_toTopOf="@+id/trip_destination_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/trip_images_button" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/trip_description_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints="none"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/trip_description"
                app:counterEnabled="true"
                app:counterMaxLength="@integer/max_description_text_length"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="@+id/trip_destination_layout"
                app:layout_constraintStart_toStartOf="@+id/trip_name_layout"
                app:layout_constraintTop_toBottomOf="@+id/trip_destination_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/trip_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|top"
                    android:inputType="textMultiLine|textCapSentences" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        style="?attr/floatingActionButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/save_new_trip_button"
        android:layout_margin="16dp"
        app:srcCompat="@drawable/ic_baseline_save_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/save_new_trip_button" />
</androidx.constraintlayout.widget.ConstraintLayout>
